--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,10 @@ section#header div.container div.header_text h1.anim-typwriter {
 
 section#header div.container div.header_text p.header_content {
 
+	width: 100%;
+
+	justify-content: center;
+
 	font-family: 'Nunito';
 
 	font-weight: 200;
@@ -145,9 +149,11 @@ section#header div.container div.header_text p.header_content {
 
 	margin-top: 20px;
 
-	text-align: justify;
+	margin-left: auto;
 
-	background-color: transparent;
+	margin-right: auto;
+
+	text-align: justify;
 
 }
 
@@ -163,15 +169,17 @@ nav#sideNav {
 
 	top: 0;
 
-	//background-color: rgba(239, 239, 235, .2);
+	background-color: rgba(239, 239, 235, .1);
 
-	background-color: transparent;
+	backdrop-filter: blur(30px);
 
 	z-index: 2;
 
 	transition: .5s ease;
 
-		border: 1px solid black;
+	display: flex;
+
+	justify-content: center;
 
 }
 
@@ -179,11 +187,13 @@ nav#sideNav ul {
 
 	background-color: transparent;
 
-	text-align: center;
+	display: flex;
+
+	flex-direction: column;
+
+	justify-content: space-around;
 
 	margin-top: 120px;
-
-		border: 1px solid black;
 
 }
 
@@ -191,47 +201,37 @@ nav#sideNav ul li {
 
 	background-color: transparent;
 
-	backdrop-filter: blur(30px);
-
-	box-shadow: 5px 5px 20px rgba(0, 0, 0, .3);
-
 	list-style: none;
+
+	display: flex;
+
+	justify-content: center;
+
+	font-size: 20px;
+
+	transition: all .3s ease-in-out;
+
+}
+
+nav#sideNav ul li:hover {
+
+	font-size: 45px;
+
+	transition: all .3s ease-in-out;
 
 }
 
 nav#sideNav ul li a.menu_option {
 
-	font-family: 'Maven Pro';
-
-	font-weight: 600;
-
-	font-size: 25px;
-
-	text-transform: uppercase;
-
-	text-decoration: none;
-
-	background-color: transparent;
-
-	//color: #FFFFFF;
-
-}
-
-nav#sideNav ul li a.menu_option span.link_text {
-
-	color: limegreen;
-
 	background-color: transparent;
 
 }
 
-nav#sideNav ul li a i.fas {
+nav#sideNav ul li a.menu_option i.fas {
 
 	background-color: transparent;
 
-	color: #FFFFFF;
-
-	transition: opacity 100ms ease;
+	color: red;
 
 }
 
@@ -247,9 +247,9 @@ div.menu_button {
 
 	top: 0;
 
-	margin-right: 10px;
+	margin-right: 15px;
 
-	margin-top: 10px;
+	margin-top: 15px;
 
  	display: flex;
 
