--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,100 @@ section#header div.container div.header_text p.header_content {
 
 }
 
+section#about {
+
+	padding: 100px 0;
+
+	display: flex;
+
+	align-items: center;
+
+	flex-wrap: wrap;
+
+}
+
+section#about div.about-left-col {
+
+	flex-basis: 50%;
+
+}
+
+section#about div.about-left-col div#left-col-image {
+
+	width: 600px;
+
+	height: 600px;
+
+	background-image: url('../vectors/security_guards.svg');
+
+	background-repeat: no-repeat;
+
+	background-size: 600px;
+
+	margin-left: 35px;
+
+}
+
+section#about div.about-right-col {
+
+	flex-basis: 50%;
+
+	text-align: justify;
+
+}
+
+section#about div.about-right-col div.about-text {
+
+	margin-right: 80px;
+
+}
+
+section#about div.about-right-col div.about-text p.about-content {
+
+	width: 90%;
+
+	font-family: 'Nunito';
+
+	font-weight: 400;
+
+	font-size: 18px;
+
+	color: #464146;
+
+}
+
+section#about div.about-right-col div.about-text p.about-content span.content-markup {
+
+	font-weight: 700;
+
+	color: #496D96;
+
+}
+
+section#about div.about-right-col div.about-text h1.about-title {
+
+	font-family: 'Maven Pro';
+
+	font-weight: 600;
+
+	font-size: 40px;
+
+	width: 90%;
+
+	color: #496D96;
+
+	text-transform: uppercase;
+
+	text-align: right;
+
+	box-sizing: border-box;
+
+	padding-right: 50px;
+
+	margin-bottom: 20px;
+
+}
+
 nav#sideNav {
 
 	width: 300px;
